[package]
name = "threadbag"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
anyhow = "1.0.80"
serde = { version="1.0.196", features = ["derive"] } 
actix-web = "4.5.1"
tokio = { version = "1", features = ["full", "tracing"] }
subxt = { version = "0.35.0" }
subxt-signer = "0.35.0"
serde_json = "1.0.114"
sled = "0.34.7"
getrandom = "0.2.12"
flate2 = "1.0.28"
base64 = "0.21.7"
tokio-util = { version = "0.7.10", features=["rt"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
actix-cors = "0.7.0"
hex = "0.4.3" 
env_logger = "0.11.3"
chrono = "0.4.37"
bincode = "1.3.3"
reqwest = { version = "0.12.4", features = ["json"] }
polodb_core = "4.4.1"
regex = "1.10.4"
tokio-tungstenite = "0.21.0"
