[package]
name = "threadbag"
version = "0.3.4"
edition = "2021"

[profile.release]
opt-level = 's'

[features]
nightly = ["dep:tokio-console", "dep:console-subscriber"]


[dependencies]
actix-rt = "2.10.0"
anyhow = "1.0.94"
serde = { version="1.0.196", features = ["derive"] } 
actix-web = "4.9.0"
actix-cors = "0.7.0"
tokio = { version = "1.42.0", features = ["full", "tracing"] }
subxt = { version = "0.38.0" }
subxt-signer = "0.38.0"
serde_json = "1.0.133"
sled = "0.34.7"
getrandom = "0.2.15"
flate2 = "1.0.35"
base64 = "0.22.1"
tokio-util = { version = "0.7.13", features=["rt"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
hex = "0.4.3" 
env_logger = "0.11.3"
chrono = "0.4.37"
bincode = "1.3.3"
reqwest = { version = "0.12.4", features = ["json"] }
polodb_core = "5.1.3"
regex = "1.10.4"
tokio-tungstenite = "0.24.0"

tokio-console = {version = "0.1.13", default-features = false, optional = true}
console-subscriber = { version="0.4.1", default-features = false, optional = true}